fixed double border and padding issues

--- a/src/App.css
+++ b/src/App.css
@@ -105,4 +105,9 @@ color: #FFFFFF;
 
 table, th, td {
   border: 1px solid black;
+  border-collapse: collapse;
+}
+
+th {
+  padding: 7px;
 }
